ui: fix sidebar overflow

--- a/src/App.css
+++ b/src/App.css
@@ -98,6 +98,7 @@ body {
     padding: 24px;
     text-align: center;
     box-sizing: border-box;
+    overflow: scroll;
 }
 
 /* slides */
